src/pages/Index/style.css
.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  height: 100vh;
}

.img {
  height: 50px;
  width: 50px;
  /* margin-bottom: 5px; */
  /* transform: rotate(35deg); */
}

.h1 {
  display: flex;
  align-items: center;
}

